@@ -6,6 +6,7 @@
 		* Drawable.setZ, Drawable.getZ - for use with new DrawOrder.Z_ORDER
 		* Drawable.getRotation
 		* MathHelper.pointInShape - determines whether a point is inside a Sprites shape/polygon
+		* Preferences class, just a helper for SharedPreferences
 	
 	Changes
 		* DrawableObject.isOnScreen() returns FALSE if it is not added to a Layer
